cmake_minimum_required(VERSION 2.8)
project(sconeserver)
include (sconeserver.cmake)

configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/config.h.in 
  ${CMAKE_CURRENT_BINARY_DIR}/config.h)

add_definitions(-DHAVE_CONFIG_H)

add_compile_options(-Wall)

option(ENABLE_ASAN "Enable address sanitizer" ON)
option(WITH_BLUETOOTH "Enable bluetooth sockets" ON)
option(WITH_IMAGE "Enable image module" ON)
option(WITH_IP "Enable IP4 sockets" ON)
option(WITH_IP6 "Enable IP6 sockets" ON)
option(WITH_LOCAL "Enable local (UNIX domain) sockets" ON)
option(WITH_LOCATION "Enable location module" ON)
option(WITH_MARKDOWN "Enable markdown module" ON)
option(WITH_MATHS "Enable Maths module" ON)
option(WITH_MYSQL "Enable MySQL Database module" ON)
option(WITH_RSS "Enable rss module" ON)
option(WITH_SCONESITE "Enable Sconesite module" ON)
option(WITH_SERVER "Enable server" ON)
option(WITH_SQLITE "Enable SQLite database module" ON)
option(WITH_SSL "Enable secure sockets module" ON)
option(WITH_TESTBUILDER "Enable TestBuilder module" ON)
option(WITH_EXAMPLES "Enable building of example code" ON)

if(ENABLE_ASAN)
  # Enable ASAN
  #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
  #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
  #set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=address")
endif()

add_executable(sconed main.cpp)
target_include_directories(sconed PRIVATE . .. ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(sconed sconex)

install(TARGETS sconed DESTINATION ${BIN_PATH})
install(FILES sconectl DESTINATION ${BIN_PATH} 
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE 
  GROUP_EXECUTE WORLD_EXECUTE)
install(FILES sconeserver.conf DESTINATION ${CONF_PATH})
install(FILES sconed.1 sconectl.1 DESTINATION ${MAN_PATH}/man1)

add_subdirectory(sconex)

if(WITH_BLUETOOTH)
  add_subdirectory(bluetooth)
endif()
add_subdirectory(exec)
add_subdirectory(forward)
add_subdirectory(http)
if(WITH_IMAGE)
  add_subdirectory(image)
endif()
if(WITH_IP)
  add_subdirectory(ip)
endif()
if(WITH_IP6)
  add_subdirectory(ip6)
endif()
if(WITH_LOCAL)
  add_subdirectory(local)
endif()
if(WITH_LOCATION)
  add_subdirectory(location)
endif()
if(WITH_MARKDOWN)
  add_subdirectory(markdown)
endif()
if(WITH_MATHS)
  add_subdirectory(maths)
endif()
add_subdirectory(mime)
if(WITH_MYSQL)
  add_subdirectory(mysql)
endif()
if(WITH_RSS)
  add_subdirectory(rss)
endif()
if(WITH_SCONESITE)
  add_subdirectory(sconesite)
endif()
if(WITH_SERVER)
  add_subdirectory(server)
endif()
add_subdirectory(simple)
add_subdirectory(smtp)
if(WITH_SQLITE)
  add_subdirectory(sqlite)
endif()
if(WITH_SSL)
  add_subdirectory(ssl)
endif()
add_subdirectory(stat)
add_subdirectory(test)
if(WITH_TESTBUILDER)
  add_subdirectory(testbuilder)
endif()
add_subdirectory(tftp)

if(WITH_EXAMPLES)
  add_subdirectory(examples/tuesdayonly)
  add_subdirectory(examples/rot13)
endif()
